# srcj

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  lexer.h  main.cpp  note.txt  src.j  src.jl
editor/: jl-mode.el
frontend/: ast.h  common.h  lexer.h  printer.h  resolver.h
notes/Binding_Generator_20260419_010813/: notes.md
src/: Makefile  main.cpp  meson.build  src.jl
src/binding-generator/: binding.cpp  build.sh
src/frontend/: ast.h  common.h  lexer.h  printer.h  resolve.h  resolver.h
src/middle/: diagnostic.h  semantic.h  types.h
